# OpenShell

./: .daggerignore  .gitignore  .image-garden.mk  CI.md  CONTRIBUTING.md  Cargo.toml  README.md  STYLEGUIDE.md  TESTING.md  buf.yaml  dagger.json  dco-signatures.json  flake.nix  install.sh  openshell.spec  pyproject.toml  snapcraft.yaml  spread.yaml
.cargo/: config.toml
.dagger/: pyproject.toml
.dagger/tests/: test_main.py
.github/: VOUCHED.td
.github/workflows/: branch-checks.yml  branch-docs.yml  branch-e2e.yml  ci-image.yml  docker-build.yml  e2e-centos-selinux.yml  e2e-kubernetes-test.yml  e2e-label-help.yml  e2e-test.yml  nested-virtualization-probe.yml  nix-ci.yml  publish-docs-website.yml  release-canary.yml  release-dev.yml  release-tag.yml  rpm-package.yml  rust-cache-seed.yml  rust-native-build.yml  sync-docs.yml
.image-garden/: .gitignore
architecture/: build.md  compute-runtimes.md  gateway.md  python-sdk.md  sandbox.md  security-policy.md
crates/openshell-bootstrap/: Cargo.toml
crates/openshell-cli/: Cargo.toml
crates/openshell-core/: Cargo.toml  README.md  build.rs
crates/openshell-driver-docker/: Cargo.toml  README.md
crates/openshell-driver-kubernetes/: Cargo.toml  README.md
crates/openshell-driver-kubernetes-secrets/: Cargo.toml
crates/openshell-driver-kubernetes-secrets/src/: lib.rs
crates/openshell-driver-openbao/: Cargo.toml
crates/openshell-driver-openbao/src/: lib.rs
crates/openshell-driver-podman/: Cargo.toml  NETWORKING.md  README.md
crates/openshell-driver-slurm/: Cargo.toml  README.md
crates/openshell-driver-slurm/src/: config.rs  driver.rs  grpc.rs  lib.rs  main.rs
crates/openshell-driver-vm/: Cargo.toml  README.md  default.nix
crates/openshell-gateway-interceptors/: Cargo.toml
crates/openshell-interceptors/: Cargo.toml
crates/openshell-interceptors/src/: lib.rs
crates/openshell-policy/: Cargo.toml
crates/openshell-prover/: Cargo.toml  MAXIMUM_POLICY_ENVELOPE_SPIKE.md  README.md
crates/openshell-prover/src/: envelope.rs  lib.rs  policy.rs
crates/openshell-providers/: Cargo.toml
crates/openshell-router/: Cargo.toml
crates/openshell-sandbox/: Cargo.toml  default.nix
crates/openshell-sdk/: README.md
crates/openshell-server/: Cargo.toml
crates/openshell-supervisor-middleware/: Cargo.toml
crates/openshell-supervisor-network/: Cargo.toml
crates/openshell-supervisor-process/: Cargo.toml
crates/openshell-tui/: Cargo.toml
crates/xtask/: Cargo.toml
deploy/docker/: Dockerfile.ci  Dockerfile.cli-macos  Dockerfile.python-wheels  Dockerfile.python-wheels-macos  Dockerfile.supervisor  devshell-bootstrap.sh
deploy/man/: openshell-gateway.8.md  openshell-gateway.env.5.md  openshell.1.md
deploy/rpm/: CONFIGURATION.md  QUICKSTART.md  TROUBLESHOOTING.md  gateway.toml.default
docs/_components/: jsx.d.ts
docs/about/: installation.mdx  supported-agents.mdx
docs/extensibility/: supervisor-middleware.mdx
docs/get-started/: quickstart.mdx
docs/kubernetes/: access-control.mdx  ingress.mdx  managing-certificates.mdx  openshift.mdx  setup.mdx  topology.mdx
docs/observability/: logging.mdx
docs/providers/: aws-sigv4.mdx
docs/reference/: api-compatibility.mdx  gateway-auth.mdx  gateway-config.mdx  gateway-interceptors.mdx  policy-schema.mdx  sandbox-compute-drivers.mdx  support-matrix.mdx
docs/sandboxes/: manage-gateways.mdx  manage-providers.mdx  manage-sandboxes.mdx  policies.mdx  policy-advisor.mdx  providers-v2.mdx
docs/security/: best-practices.mdx
e2e/: with-docker-gateway.sh  with-kube-gateway.sh  with-podman-gateway.sh  with-slurm-gateway.sh
e2e/policy-advisor/: mechanistic-smoke.sh  test.sh  wait-smoke.sh
e2e/python/: test_sandbox_api.py  test_sandbox_providers.py
e2e/rust/: Cargo.toml  e2e-docker.sh  e2e-kubernetes.sh  e2e-podman-rootless.sh  e2e-podman.sh  e2e-slurm.sh  e2e-vm.sh
e2e/slurm/: Dockerfile  cgroup.conf  docker-compose.yml  entrypoint.sh  slurm.conf
e2e/supervisor-middleware-fixture/: Cargo.toml
e2e/supervisor-middleware-fixture/src/: main.rs
e2e/support/: capbset-probe.c  gateway-common.sh
examples/: aws-s3-sts.md  sync-files.md
examples/agent-driven-policy-management/: README.md  agent-task.md  demo.sh  policy.template.yaml
examples/fake-driver-rs/: Cargo.toml
examples/fake-driver-rs/scenarios/: happy-path.toml
examples/fake-driver-rs/src/: config.rs  driver.rs  main.rs  sequence.rs
examples/governance-interceptor/: Cargo.toml  README.md  policy.yaml  smoke.sh
examples/governance-interceptor/src/: main.rs
examples/managed-maximum-policies/: README.md  github-rest.yaml
examples/multi-agent-notepad/: notebook.ipynb
examples/opencode-privacy-redaction/: README.md  WALKTHROUGH.md
examples/policy-advisor/: README.md
examples/policy-governance-interceptor/: Cargo.toml  README.md  policy.yaml  smoke.sh
examples/policy-governance-interceptor/src/: lib.rs  main.rs
examples/policy-source/: README.md  smoke.sh
examples/sandbox-policy-quickstart/: README.md  demo.sh
examples/spiffe-token-grant-demo/: README.md  demo.sh
examples/supervisor-middleware-content-guard/: README.md  policy.yaml
fern/components/: CustomFooter.tsx
nix/: crate.nix  dagger.nix  libkrun.nix  libkrunfw.nix  openshell-vm-driver-bundle.nix  workspace.nix
proto/: compute_driver.proto  credential_driver.proto  datamodel.proto  gateway_interceptor.proto  interceptor.proto  middleware.proto  openshell.proto  sandbox.proto  supervisor_middleware.proto
providers/: aws-s3.yaml  aws.yaml
python/: release_tooling_test.py
python/openshell/: __init__.py  release_formula_test.py  sandbox.py  sandbox_test.py
rfc/0002-agent-driven-policy-management/: README.md
rfc/0005-named-compute-driver-registry/: README.md
rfc/0005-sandbox-egress-middleware/: README.md  TRACKER.md
rfc/0005-sandbox-proxy-egress-adapter/: README.md  current-shape.md  implementation-plan.md  (+1 more)
scripts/: devshell  smoke-test-network-policy.sh  test-install-ostree.sh  update_license_headers.py
tasks/: ci.toml  helm.toml  python.toml  rust.toml  test.toml  typescript.toml  vm.toml
(+246 files in other folders)
