# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "openshell-driver-kubernetes-secrets"
description = "Kubernetes Secrets credential driver for OpenShell"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
openshell-core = { path = "../openshell-core", default-features = false }

k8s-openapi = { workspace = true }
kube = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
toml = { workspace = true }
tonic = { workspace = true }

[lints]
workspace = true
