# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "openshell-driver-slurm"
description = "Slurm compute driver for OpenShell"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "openshell-driver-slurm"
path = "src/main.rs"

[dependencies]
openshell-core = { path = "../openshell-core" }

tokio = { workspace = true }
tonic = { workspace = true, features = ["transport"] }
futures = { workspace = true }
tokio-stream = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
