# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "openshell-interceptors"
description = "Gateway interceptor config, planning, transport, and review runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
openshell-core = { path = "../openshell-core", default-features = false }

tokio = { workspace = true }
tonic = { workspace = true, features = ["channel", "tls-native-roots"] }
prost-types = { workspace = true }
hyper-util = { workspace = true, features = ["tokio"] }
tower = { workspace = true }

metrics = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
json-patch = "1.4"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
