# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "fake-driver-rs"
description = "Scriptable fake compute driver for testing gateway integration"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "fake-driver-rs"
path = "src/main.rs"

[dependencies]
openshell-core = { path = "../../crates/openshell-core", default-features = false }

tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true, features = ["transport"] }
futures = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }

[lints]
workspace = true
