# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[workspace]

[package]
name = "openshell-governance-interceptor-example"
version = "0.0.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"

[dependencies]
base64 = "0.22"
openshell-core = { path = "../../crates/openshell-core", default-features = false }
openshell-policy = { path = "../../crates/openshell-policy" }
prost-types = "0.14"
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "fs", "signal"] }
tonic = { version = "0.14", features = ["transport"] }

[[bin]]
name = "governance-interceptor"
path = "src/main.rs"
